# shoes-project

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
src/: manage.py
src/apps/accounts/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/apps/accounts/migrations/: 0001_initial.py
src/apps/catalog/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
src/apps/catalog/management/commands/: import_data.py
src/apps/catalog/migrations/: 0001_initial.py
src/apps/orders/: admin.py  forms.py  models.py  urls.py  views.py
src/apps/orders/migrations/: 0001_initial.py  0002_remove_order_client_name_order_client.py
src/config/: conf.py  request.py  settings.py  urls.py
src/static/css/: style.css
src/templates/: base.html
src/templates/accounts/: login.html
src/templates/catalog/: product_confirm_delete.html  product_form.html  product_list.html
src/templates/catalog/partials/: product_table.html
src/templates/orders/: order_confirm_delete.html  order_form.html  order_list.html
src/templates/orders/partials/: order_table.html
